# customers-churn-prediction

./: README.md  app.py  config.py  exploration.ipynb  process_data.py  pyproject.toml  train_model.py
data/: test.csv  train.csv
doc/: README.md  blog.md
experiments/202210221945/: feature_importances.csv  model.joblib  stats.csv  test_dataset_outputs.csv
experiments/202210222013/: model.joblib  stats.csv  test_dataset_outputs.csv
