[tool.poetry]
name = "customer-churn-prediction"
version = "0.1.0"
description = "explore different methods and libraries to conduct customer churn prediction"
authors = ["Feng Canfang <canfang.feng@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.10"
scikit-learn = "~1.1.2" 
seaborn = "~0.12.0"
shap = "~0.41.0"
matplotlib = "~3.5.2"
# pandas = "~1.2"
ipykernel = "~6.16.1"
streamlit = "^1.13.0"


[tool.poetry.dev-dependencies]
black = "isort"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
